// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/PostPreHeader > should not render anything if both skipFlagged and skipPinned are true 1`] = `<div />`;

exports[`components/PostPreHeader > should not render anything if the post is neither flagged nor pinned 1`] = `<div />`;

exports[`components/PostPreHeader > should properly handle flagged posts (and not pinned) 1`] = `
<div>
  <div
    class="post-pre-header"
  >
    <div
      class="post-pre-header__icons-container"
    >
      <span
        class="icon icon--post-pre-header"
      >
        <svg
          aria-label="Saved Icon"
          height="15px"
          role="img"
          viewBox="0 0 12 15"
          width="12px"
        >
          <g
            fill="inherit"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <g
              fill="inherit"
              fill-rule="nonzero"
              transform="translate(-1073.000000, -33.000000)"
            >
              <g
                transform="translate(-1.000000, 0.000000)"
              >
                <g
                  transform="translate(1064.000000, 22.000000)"
                >
                  <g
                    transform="translate(10.000000, 11.000000)"
                  >
                    <path
                      d="M9.76172 0.800049H2.23828C1.83984 0.800049 1.48828 0.952393 1.18359 1.25708C0.902344 1.53833 0.761719 1.88989 0.761719 2.31177V14.3L6 12.05L11.2383 14.3V2.31177C11.2383 1.88989 11.0859 1.53833 10.7812 1.25708C10.5 0.952393 10.1602 0.800049 9.76172 0.800049Z"
                    />
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </span>
    </div>
    <div
      class="post-pre-header__text-container"
    >
      <span>
        <a>
          Saved
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/PostPreHeader > should properly handle flagged posts (and not pinned) 2`] = `<div />`;

exports[`components/PostPreHeader > should properly handle link clicks 1`] = `
<div>
  <div
    class="post-pre-header"
  >
    <div
      class="post-pre-header__icons-container"
    >
      <span
        class="icon-pin icon icon--post-pre-header"
      />
      <span
        class="icon icon--post-pre-header"
      >
        <svg
          aria-label="Saved Icon"
          height="15px"
          role="img"
          viewBox="0 0 12 15"
          width="12px"
        >
          <g
            fill="inherit"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <g
              fill="inherit"
              fill-rule="nonzero"
              transform="translate(-1073.000000, -33.000000)"
            >
              <g
                transform="translate(-1.000000, 0.000000)"
              >
                <g
                  transform="translate(1064.000000, 22.000000)"
                >
                  <g
                    transform="translate(10.000000, 11.000000)"
                  >
                    <path
                      d="M9.76172 0.800049H2.23828C1.83984 0.800049 1.48828 0.952393 1.18359 1.25708C0.902344 1.53833 0.761719 1.88989 0.761719 2.31177V14.3L6 12.05L11.2383 14.3V2.31177C11.2383 1.88989 11.0859 1.53833 10.7812 1.25708C10.5 0.952393 10.1602 0.800049 9.76172 0.800049Z"
                    />
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </span>
    </div>
    <div
      class="post-pre-header__text-container"
    >
      <span>
        <a>
          Pinned
        </a>
        <span
          class="post-pre-header__link-separator"
        >
          ⬤
        </span>
        <a>
          Saved
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/PostPreHeader > should properly handle pinned posts (and not flagged) 1`] = `
<div>
  <div
    class="post-pre-header"
  >
    <div
      class="post-pre-header__icons-container"
    >
      <span
        class="icon-pin icon icon--post-pre-header"
      />
    </div>
    <div
      class="post-pre-header__text-container"
    >
      <span>
        <a>
          Pinned
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/PostPreHeader > should properly handle pinned posts (and not flagged) 2`] = `<div />`;

exports[`components/PostPreHeader > should properly handle posts that are flagged and pinned > both skipFlagged and skipPinned are not true 1`] = `
<div>
  <div
    class="post-pre-header"
  >
    <div
      class="post-pre-header__icons-container"
    >
      <span
        class="icon-pin icon icon--post-pre-header"
      />
      <span
        class="icon icon--post-pre-header"
      >
        <svg
          aria-label="Saved Icon"
          height="15px"
          role="img"
          viewBox="0 0 12 15"
          width="12px"
        >
          <g
            fill="inherit"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <g
              fill="inherit"
              fill-rule="nonzero"
              transform="translate(-1073.000000, -33.000000)"
            >
              <g
                transform="translate(-1.000000, 0.000000)"
              >
                <g
                  transform="translate(1064.000000, 22.000000)"
                >
                  <g
                    transform="translate(10.000000, 11.000000)"
                  >
                    <path
                      d="M9.76172 0.800049H2.23828C1.83984 0.800049 1.48828 0.952393 1.18359 1.25708C0.902344 1.53833 0.761719 1.88989 0.761719 2.31177V14.3L6 12.05L11.2383 14.3V2.31177C11.2383 1.88989 11.0859 1.53833 10.7812 1.25708C10.5 0.952393 10.1602 0.800049 9.76172 0.800049Z"
                    />
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </span>
    </div>
    <div
      class="post-pre-header__text-container"
    >
      <span>
        <a>
          Pinned
        </a>
        <span
          class="post-pre-header__link-separator"
        >
          ⬤
        </span>
        <a>
          Saved
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/PostPreHeader > should properly handle posts that are flagged and pinned > skipFlagged is true 1`] = `
<div>
  <div
    class="post-pre-header"
  >
    <div
      class="post-pre-header__icons-container"
    >
      <span
        class="icon-pin icon icon--post-pre-header"
      />
    </div>
    <div
      class="post-pre-header__text-container"
    >
      <span>
        <a>
          Pinned
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/PostPreHeader > should properly handle posts that are flagged and pinned > skipPinned is true 1`] = `
<div>
  <div
    class="post-pre-header"
  >
    <div
      class="post-pre-header__icons-container"
    >
      <span
        class="icon icon--post-pre-header"
      >
        <svg
          aria-label="Saved Icon"
          height="15px"
          role="img"
          viewBox="0 0 12 15"
          width="12px"
        >
          <g
            fill="inherit"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <g
              fill="inherit"
              fill-rule="nonzero"
              transform="translate(-1073.000000, -33.000000)"
            >
              <g
                transform="translate(-1.000000, 0.000000)"
              >
                <g
                  transform="translate(1064.000000, 22.000000)"
                >
                  <g
                    transform="translate(10.000000, 11.000000)"
                  >
                    <path
                      d="M9.76172 0.800049H2.23828C1.83984 0.800049 1.48828 0.952393 1.18359 1.25708C0.902344 1.53833 0.761719 1.88989 0.761719 2.31177V14.3L6 12.05L11.2383 14.3V2.31177C11.2383 1.88989 11.0859 1.53833 10.7812 1.25708C10.5 0.952393 10.1602 0.800049 9.76172 0.800049Z"
                    />
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </span>
    </div>
    <div
      class="post-pre-header__text-container"
    >
      <span>
        <a>
          Saved
        </a>
      </span>
    </div>
  </div>
</div>
`;
